Refactored and renamed a little. Also added a parallel object service, that will, at least in most cases, improve performance

--- a/Funda.Ranker.Tests/Funda.Ranker.Tests.csproj
+++ b/Funda.Ranker.Tests/Funda.Ranker.Tests.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Funda.Ranker\Funda.Ranker.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IoC\" />
+  </ItemGroup>
+
 </Project>
